fix: 🐛 Resolve 404 issue in repo config confirm api
Currently if there are no repo configs for a repo we are unable to add
new repo config. Its throwing 404 error. Fixed the e error.
