# apps/api/openapi.json
@@ -4082,16 +4082,6 @@
               }
             }
           },
-          "404": {
-            "description": "Default Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
           "500": {
             "description": "Default Response",
             "content": {
